@@ -1,3 +1,5 @@
+2008/07/03
+	47. Modification in class CkwsPlusDPLinear.
 2008/07/01
 	46. Make access functions to velocity const
 	
